# fast-volleyball-tracking-inference

./: .dockerignore  Dockerfile  PLAYER_TRACKING.md  README.md  main.py  pyproject.toml  test_pose_visualization.py  vb-court_annotator.py
models/: VballNetV1_seq9_grayscale_154_h288_w512.onnx  VballNetV1a_seq15_grayscale_best.onnx  VballNetV1c_seq15_grayscale_best.onnx  checkpoint_VballNetV3_seq9_grayscale_epoch_220_20250826_101440.onnx
ov/: VballNetGridV1b_seq15_grayscale_20260427_194144.xml  VballNetGridV1b_seq9_grayscale_20260319_193937.xml  VballNetGridV1c_seq9_grayscale_20260317.xml  VballNetV2_seq9_grayscale_ov.xml
scripts/: analyze_zone4_ball_trajectories.py  inference_openvino_seq_gray_crop.py
src/: ball_tracker.py  celery_worker.py  check_setup.py  constants.py  coort_coordinats.py  court_transformer.py  csv2tracker.py  demo_player_tracking.py  demo_player_tracking_v2.py  detect_2.py  enhanced_track_analyzer.py  inference_onnx.py  inference_onnx_seq9_gray_v2.py  inference_onnx_seq_gray_v2.py  inference_openvino_seq_gray_v2.py  make_reels.py  models.py  player_tracker.py  pose_detector.py  process_track_pose.py  rally_detecter.py  serv_det.py  serv_det2.py  serve_state.py  show_rally.py  test.py  test_models.py  test_player_tracker.py  test_pose.py  track_calculator.py  track_processor.py  track_utils.py  track_vis.py
