[project]
name = "fast-volleyball-tracking-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.22.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]
